# assemble

./: CHANGELOG.md  README.md  assemble.py  assemble_cli.py  assemble_gui.py  assemble_launcher.py  pyproject.toml  requirements.txt
examples/goliat_premium_standardized/: checklist_goliat_premium_estandar.xlsx  inventario_global_estandar.xlsx
scripts/: build_launcher.ps1  build_windows.ps1  run_gui.ps1  setup_venv.ps1
src/assemble/: __init__.py  core.py  gui.py
